[package]
name = "builder"
version = "0.1.0"
authors = ["Luyu Cheng <chengluyu@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"              # A substitute implementation of the compiler's `proc_macro` API to decouple token-based libr…
syn = { version = "1.0.60", features = ["full"] }                 # Parser for Rust source code
quote = "1.0.8"                 # Quasi-quoting macro quote!(...)
